--- a/index.css
+++ b/index.css
@@ -4,11 +4,8 @@ header {
     width: 100%;
     display: flex;
     background-color: rgb(241, 201, 247);
-    border: 0%;
-    box-sizing: border-box;
-    padding: 0%;
-    margin-top: 0px;
     border-radius: 40px;
+    position: fixed;
 }
 
 nav {
@@ -48,10 +45,7 @@ ul {
     justify-content: end;
     align-items: center;
     flex-direction: row;
-    text-decoration: none;
     margin-right: 20px;
-    color: black;
-    text-decoration: none;
 }
 
 li {
@@ -60,7 +54,6 @@ li {
     justify-content: flex-end;
     align-items: center;
     margin-left: 20px;  
-    color: black;
 }
 
 a {
